--- a/formulario.html
+++ b/formulario.html
@@ -16,7 +16,7 @@
   <form action="controlador" method="post" autocomplete="off">
     <div>
       <label for="name">Ingrese su nombre:</label>
-      <input type="text" minlength="10" maxlength="50" id="name" required autofocus>
+      <input type="text" id="name" required autofocus pattern="[A-Za-z ]{10,50}">
     </div>
     <br>
     <div>
@@ -25,13 +25,13 @@
     </div>
     <br>
     <div>
-      <label for="numero">Ingrese su numero:</label>
+      <label for="numero">Ingrese su numero telefonico:</label>
       <input name="numero" id="numero" pattern="[0-9]{0,10}" required>
     </div>
     <br>
     <div>
       <label for="correo">Ingrese su correo</label>
-      <input type="email" name="correo" id="correo" pattern="+@gmail+" required>
+      <input type="email" name="correo" id="correo" pattern="[A-Za-z0-9]+@[A-Za-z]+.com" required>
     </div>
     <br>
     <div>
@@ -62,7 +62,7 @@
     <div>
       <p>Marque los lenguajes preferidos:</p>
 
-        <input type="checkbox" name="pref" id="html">
+        <input type="checkbox" name="pref" id="html" required>
         <label for="html">HTML</label>
 
         <input type="checkbox" name="pref" id="js">
@@ -86,3 +86,9 @@
   </form>
 </body>
 </html>
+
+<form>
+  <label for="email_input">Ingresa tu correo electrónico:</label><br>
+  <input type="email" id="email_input" name="email_input" required><br>
+  <input type="submit" value="Enviar">
+</form>
